--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Lily Riopelle
 email: lilykriopelle@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Musings on code.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "http://lilykriopelle.com" # the base hostname & protocol for your site
 twitter_username: lilyriopelle
 github_username:  lilykriopelle
